--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   open_filex: ^4.3.2
   path_provider: ^2.1.2
   open_file: ^3.3.2
+  flutter_pdfview: ^1.3.2
 
 dev_dependencies:
   flutter_test:
